# styx

./: .gitignore  README.md  graph.pbtxt  graph2.pbtxt  inpect.py  requirements.txt  setup.py  simple.py  simple2.py
log/: events.out.tfevents.1602786716.DESKTOP-GEJ0BFS.23004.273.v2  events.out.tfevents.1602786738.DESKTOP-GEJ0BFS.18984.273.v2  events.out.tfevents.1602787491.DESKTOP-GEJ0BFS  events.out.tfevents.1602800734.DESKTOP-GEJ0BFS
logs/fit/train/: events.out.tfevents.1602769550.DESKTOP-GEJ0BFS.20224.443.v2
stupid/: __init__.py  checkpoint.py  graph.py  layer.py  model.py  ops.py
stupid/tools/: convert_keras_model_to_tflite.py  create_sin_model.py  create_svd_model.py
stupid_android/custom_ops/: README.md
stupid_android/custom_ops/app/: build.gradle
stupid_android/custom_ops/app/src/main/: AndroidManifest.xml
stupid_android/custom_ops/app/src/main/assets/: sin.tflite
stupid_android/custom_ops/app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp  register_svd.cpp
stupid_android/custom_ops/gradle/wrapper/: gradle-wrapper.properties
stupid_android/styx_cc/: README.md  local.properties
stupid_android/styx_cc/app/: build.gradle
stupid_android/styx_cc/app/src/main/: AndroidManifest.xml
stupid_android/styx_cc/app/src/main/assets/: svd.tflite
stupid_android/styx_cc/app/src/main/cpp/: CMakeLists.txt  jni_utils.cpp  model.cpp  register_svd.cpp  timing.cpp  timing.h
stupid_cc/: README.md
styx/app/: build.gradle
styx/app/src/main/: AndroidManifest.xml
styx/app/src/main/cpp/: CMakeLists.txt  big4321_dq.h  jni_utils.h  model.cpp  svd_op.cpp  svd_op.h
styx/app/src/main/res/layout/: activity_main.xml
tests/: simple3.py  test.py  wctpaper.py
(+17 files in other folders)
